--- a/src/App.css
+++ b/src/App.css
@@ -71,8 +71,7 @@
 
 @font-face {
   font-family: "Metropolis";
-  src: url("/Metropolis/Metropolis-ExtraBoldItalic.otf")
-    format("opentype");
+  src: url("/Metropolis/Metropolis-ExtraBoldItalic.otf") format("opentype");
   font-weight: 800;
   font-style: italic;
 }
@@ -86,8 +85,7 @@
 
 @font-face {
   font-family: "Metropolis";
-  src: url("/Metropolis/Metropolis-ExtraLightItalic.otf")
-    format("opentype");
+  src: url("/Metropolis/Metropolis-ExtraLightItalic.otf") format("opentype");
   font-weight: 200;
   font-style: italic;
 }
@@ -143,8 +141,7 @@
 
 @font-face {
   font-family: "Metropolis";
-  src: url("/Metropolis/Metropolis-SemiBoldItalic.otf")
-    format("opentype");
+  src: url("/Metropolis/Metropolis-SemiBoldItalic.otf") format("opentype");
   font-weight: 600;
   font-style: italic;
 }
@@ -161,4 +158,7 @@
   src: url("/Metropolis/Metropolis-ThinItalic.otf") format("opentype");
   font-weight: 100;
   font-style: italic;
+}
+.hover\:scale-105:hover {
+  transform: scale(1.05) !important;
 }
